<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/costInput"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/custo_do_rol"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/serviceQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_foi_o_servi_o"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costInput"

        />

    <RadioGroup
        android:id="@+id/tipOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/tip20"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceQuestion">


        <!-- Add new radioButtons here -->
        <RadioButton
            android:id="@+id/tip20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_20" />

        <RadioButton
            android:id="@+id/tip18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom_18" />

        <RadioButton
            android:id="@+id/tip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nher_15" />

    </RadioGroup>

    <Switch
        android:id="@+id/switchRound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/arredondar_pra_cima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tipOption"
        app:layout_constraintTop_toBottomOf="@id/tipOption"


        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchRound" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calButton"
        tools:text="Quantia: $10"

        />

</androidx.constraintlayout.widget.ConstraintLayout>